--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                             <tr>
                                 <th scope="row">{{ user.rank }}</th>
                                 <td>{{ user.name }}</td>
-                                <td>{{ 80-user.rank }}</td>
+                                <td>{{ user.point }}</td>
                                 <td>{{ user.gross }}</td>
                                 <td>{{ user.game_count }}</td>
                                 <td>イーグル1, バーディ1</td>
