--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">水曜ゴルフGP 2024</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">ベストスコア:84(真鍋正人)</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -68,7 +69,7 @@
                                 <td>{{ user.point }}</td>
                                 <td>{{ user.gross }}</td>
                                 <td>{{ user.game_count }}</td>
-                                <td>イーグル1, バーディ1</td>
+                                <td>{{ user.prize_list }}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
