--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,6 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">水曜ゴルフGP 2024</h1>
-                <h1 class="masthead-heading text-uppercase mb-0">ベストスコア:84(真鍋正人)</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -42,6 +41,7 @@
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">年間ランキング</h2>
+                <h3 class="text-center">ベストスコア: {{bestscore.gross}}({{bestscore.name}})</h3>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
