--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,7 @@
                                 <th scope="col">ポイント</th>
                                 <th scope="col">平均グロス</th>
                                 <th scope="col">参加回数</th>
+                                <th scope="col">ニアピン</th>
                                 <th scope="col">特記事項</th>
                             </tr>
                         </thead>
@@ -69,6 +70,7 @@
                                 <td>{{ user.point }}</td>
                                 <td>{{ user.gross }}</td>
                                 <td>{{ user.game_count }}</td>
+                                <td>{{ user.nearpin if user.nearpin > 0 else "" }}</td>
                                 <td>{{ user.prize_list }}</td>
                             </tr>
                             {% endfor %}
