--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -76,7 +76,7 @@
                             {% endfor %}
                         </tbody>
                     </table>
-                    <p>今年もあと2戦です、がんばりましょう</p>
+                    <p>{{ message }}</p>
                 </div>
             </div>
         </section>
