remove ベスグロ名前

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">年間ランキング</h2>
-                <h3 class="text-center">ベストスコア: {{bestscore.gross}}({{bestscore.name}})</h3>
+                <h3 class="text-center">ベストスコア: {{bestscore.gross}}</h3>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
