--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,7 @@
                             {% endfor %}
                         </tbody>
                     </table>
+                    <p>順位ボーナスポイント: 1位 +5, 2位 +3, 3位 +1</p>
                     <p>{{ message }}</p>
                 </div>
             </div>
