--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,14 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/sort.css" rel="stylesheet" />
+        <style>
+         tr:hover {
+             background: #def;
+         }
+         tr.top {
+           font-weight: bold;
+         }
+        </style>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -63,7 +71,12 @@
                         </thead>
                         <tbody>
                             {% for user in data %}
-                            <tr>
+                            {% if user.rank == "1" or user.rank == "1T" %}
+                            {% set class = "top" %}
+                            {% else %}
+                            {% set class = "" %}
+                            {% endif %}
+                            <tr class="{{ class }}">
                                 <th scope="row">{{ user.rank }}</th>
                                 <td>{{ user.name }}</td>
                                 <td>{{ user.point }}</td>
