--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,6 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="../css/styles.css" rel="stylesheet" />
         <link href="../css/sort.css" rel="stylesheet" />
-        <style>
-         tr:hover {
-             background: #def;
-         }
-         tr.top {
-           font-weight: bold;
-         }
-        </style>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -62,7 +54,7 @@
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">名前</th>
+                                <th scope="col" class="sorter-false">名前</th>
                                 <th scope="col">ポイント</th>
                                 <th scope="col">参加回数</th>
                                 <th scope="col">ニアピン</th>
