fix sortable key

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                     <table class="table tablesorter" id="table_sort">
                         <thead>
                             <tr>
-                                <th scope="col">#</th>
+                                <th scope="col" class="sorter-false">#</th>
                                 <th scope="col" class="sorter-false">名前</th>
                                 <th scope="col">ポイント</th>
                                 <th scope="col">参加回数</th>
