--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                                 <th scope="col">ポイント</th>
                                 <th scope="col">参加回数</th>
                                 <th scope="col">ニアピン</th>
-                                <th scope="col">特記事項</th>
+                                <th scope="col" class="{sorter:'metadata'}">特記事項</th>
                                 <th scope="col">平均ストローク</th>
                             </tr>
                         </thead>
@@ -118,7 +118,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
@@ -132,6 +132,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.1/js/extras/jquery.metadata.min.js"></script>
         <script>
          $(document).ready(function() {
+             setAppendValue()
              $("#table_sort").tablesorter();
          });
         </script>
