update template to show hdcp

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,7 @@
                                 <th scope="col">ニアピン</th>
                                 <th scope="col" class="{sorter:'metadata'}">特記事項</th>
                                 <th scope="col">平均ストローク</th>
+                                <th scope="col">HDCP</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -77,6 +78,7 @@
                                 <td>{{ user.nearpin if user.nearpin > 0 else "" }}</td>
                                 <td>{{ user.prize_list }}</td>
                                 <td>{{ user.average_gross }}</td>
+                                <td>{{ user.hdcp}}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
