update template(add link)

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
         <header class="masthead text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">水曜ゴルフGP 2024</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">水曜ゴルフGP {{year}}</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -85,6 +85,7 @@
                     </table>
                     <p>順位ボーナスポイント: 1位 +5, 2位 +3, 3位 +1</p>
                     <p>{{ message }}</p>
+                    <p><a href="hdcp.html">HDCP一覧</p>
                 </div>
             </div>
         </section>
