--- a/templates/hdcp.html
+++ b/templates/hdcp.html
@@ -26,7 +26,7 @@
         <header class="masthead text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">水曜ゴルフGP 2024</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">水曜ゴルフGP {{year}}</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -67,6 +67,7 @@
                             {% endfor %}
                         </tbody>
                     </table>
+                    <p><a href="index.html">ランキング</p>
                 </div>
             </div>
         </section>
